# raytracing-hw

./: .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
examples/: WFT  basic01.txt  practice3_1.txt  practice5_2.txt
src/: main.cpp
src/core/: bvh.cpp  bvh.h  camera.cpp  camera.h  scene.cpp  scene.h
src/geometry/: box.h  bvh.cpp  bvh.h  ellipsoid.h  light_source.cpp  light_source.h  objects.h  plane.h  primitive.cpp  primitive.h  scene.cpp  scene.h
src/io/: scene_parser.cpp  scene_parser.h
src/render/: canvas.cpp  canvas.h
src/utils/: base.cpp  base.h  matrix.h  random.cpp  random.h  vector.cpp  vector.h
